testing for date and localStorage complete

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             <!-- Time | Space to Write | Save button -->
             <!-- columns for each of these three things? -->
             <!-- Repeat 8 times -->
+
+            <!-- testing out the box-->
+            <input type="text" id="test">
+            <button id="save">save</button>
           </div>
 
         </div>
